# DownloadIntegrator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.ja.md  README.md  README_en.md  SECURITY.md  icon.rc  modify.txt  package-release.bat  shape_cover_extractor.py  update-translations.bat  vcpkg-configuration.json  vcpkg.json
docs/: ANTIVIRUS_FAQ.md  README.md
page/: index.html  page_1.html
qml/: Main.qml  qml.qrc
qml/components/: CustomTitleBar.qml  DetailDrawer.qml  DownloadListPopup.qml  IconButton.qml  ProgressIndicator.qml  SettingsDialog.qml  StyledButton.qml  StyledComboBox.qml  StyledTable.qml  StyledTextField.qml  qmldir
qml/layouts/: AppMenuBar.qml  AppStatusBar.qml  qmldir
qml/pages/: DownloadedPage.qml  ModifierDetailPanel.qml  SearchPage.qml  qmldir
qml/themes/: ThemeProvider.qml  qmldir
resources/: game_mappings.json  resources.qrc
resources/style/: classic.qss  colorful.qss  dark.qss  highcontrast.qss  main.qss  win11.qss
resources/translations/: downloadintegrator_en_US.ts  downloadintegrator_ja_JP.ts
src/: Backend.cpp  Backend.h  ConfigManager.cpp  ConfigManager.h  CoverExtractor.cpp  CoverExtractor.h  DownloadIntegrator.cpp  DownloadIntegrator.h  DownloadIntegrator.ui  DownloadManager.cpp  DownloadManager.h  DownloadedModifierModel.cpp  FileSystem.cpp  FileSystem.h  GameMappingManager.cpp  GameMappingManager.h  LanguageManager.cpp  LanguageManager.h  ModifierInfoManager.cpp  ModifierInfoManager.h  ModifierListModel.cpp  ModifierListModel.h  ModifierManager.cpp  ModifierManager.h  ModifierParser.cpp  ModifierParser.h  NetworkManager.cpp  NetworkManager.h  SearchManager.cpp  SearchManager.h  SettingsDialog.cpp  SettingsDialog.h  ThemeManager.h  UIHelper.cpp  UIHelper.h  UpdateManager.cpp  UpdateManager.h  main.cpp  translator.cpp  translator.h
translations/: downloadintegrator_en_US.ts  downloadintegrator_ja_JP.ts
